<resources>
    <string name="app_name">Kursovaya</string>
    <string name="app_in_name">ARM_Stroy</string>
    <string name="app_after_name">Register window</string>
    <string name="string_bottom">Войдите в учетную запись</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Регистрация</string>
    <string name="menu_title">Меню приложения</string>
    <string name="assortiment">Ассортимент</string>
    <string name="stroy_mat_fas">Стеновые и фасадные материалы</string>
    <string name="stroy_krovlya">Кровля</string>
    <string name="stroy_teploizol">Теплоизоляция</string>
    <string name="suhie_smessi">Сухие смеси</string>
    <string name="btnBack">Назад</string>
    <string name="addMat">Поставка</string>
    <string name="gazobeton">Газобетон Bonolit</string>
    <string name="istkult">Газобетон Istkult</string>
    <string name="knauf">Скоба Knauf С1</string>
    <string name="kostil">Костыль кровельный</string>
    <string name="planka">Планка торцевая для металлочерепицы</string>
    <string name="samorez">Саморезы кровельные с буром</string>
    <string name="teplo1">Экструдированный пенополистирол Пеноплэкс</string>
    <string name="teplo2">Шумоизоляция Rockwool</string>
    <string name="teplo3">Экструдированный пенополистирол Технониколь</string>
    <string name="smesi1">Пескобетон</string>
    <string name="smesi2">Ровнитель (наливной пол) универсальный</string>
    <string name="smesi3">Штукатурка гипсовая Knauf</string>
    <string name="contacts">Контакты складов</string>
    <string name="sklad1">Склад 1</string>
    <string name="sklad2">Склад 2</string>
    <string name="sklad3">Склад 3</string>
    <string name="adr">Адрес: </string>
    <string name="tel">+7(777)777-77-77</string>
    <string name="adr1">Адрес 1</string>
    <string name="adr2">Адрес 2</string>
    <string name="adr3">Адрес 3</string>
    <string name="infoTitle">О приложении</string>
    <string name="order">Введите ваш заказ</string>
    <string name="author">Автор: Копиенко К.С. ИКБО-25-21</string>
    <string name="description">Приложение разработано для курсовой работы по теме АРМ продавца строительных материалов</string>
</resources>