<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E4C3A9"
    android:layout_height="match_parent"
    tools:context=".AssortimentActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="262dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/assortiment"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="203dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/stroy_mat_fas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stroy_mat_fas" />

        <Button
            android:id="@+id/krovlya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stroy_krovlya" />

        <Button
            android:id="@+id/teploizol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stroy_teploizol" />

        <Button
            android:id="@+id/suhie_smessi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suhie_smessi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnBack" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>