<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E4C3A9"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

        <TextView
            android:id="@+id/contactTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/contacts"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="475dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sklad1"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sklad1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/adr1"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/adr1"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tel1"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/tel" />
            </LinearLayout>

            <ImageView
                android:id="@+id/pos1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/pos1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sklad2"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sklad2"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/adr2"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/adr2"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tel2"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/tel" />
            </LinearLayout>

            <ImageView
                android:id="@+id/pos2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/pos2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sklad3"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sklad3"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/adr3"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/adr3"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tel3"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/tel" />
            </LinearLayout>

            <ImageView
                android:id="@+id/pos3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/pos3" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="372dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:text="@string/btnBack" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:text="@string/addMat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>